# emission-analyzer-model

./: .gitignore  CMakeLists.txt  CompactClassificationModel.c  CompactClassificationTree.c  CompactEnsemble.c  Dockerfile  EmissionsPredictor.sln  EmissionsPredictor.vcxproj  EmissionsPredictor.vcxproj.filters  README.md  main.c  minOrMax.c  predictOneWithCache.c  predict_emissions.c  predict_emissions_data.c  predict_emissions_initialize.c  predict_emissions_rtw.bat  predict_emissions_terminate.c  prediction_wrapper.sh  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  server.sh  updateCache.c
include/: CompactClassificationModel.h  CompactClassificationTree.h  CompactEnsemble.h  main.h  minOrMax.h  predictOneWithCache.h  predict_emissions.h  predict_emissions_data.h  predict_emissions_initialize.h  predict_emissions_internal_types.h  predict_emissions_terminate.h  predict_emissions_types.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  updateCache.h
